<resources>
    <string name="app_name">Climbstaff</string>
    <string name="no_internet">No Internet connection, Please connect to internet</string>
    <string name="default_notification_channel_id">100</string>
    <string name="action_search">Search</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Authorize and Login</string>
    <string name="error_please_enter_email">Please enter EmailID</string>
    <string name="error_pwd">Please enter Password</string>
    <string name="quote_of_the_day">Quote of the day</string>
    <string name="my_activity">My Activity</string>
    <string name="activity">My Activity</string>
    <string name="my_customer">My Customers</string>
    <string name="action_logout">Logout</string>
    <string name="you_are_taking_care_of">You are taking care of %s Customer</string>
    <string name="activity_offline">Currently you are offline/Off Duty</string>
    <string name="activity_online">Currently you are online/On Duty</string>
    <string name="work_status">Duty Status</string>
    <string name="unknown_location">\"\"</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="default_channel">Default Channel</string>
    <string name="permission_read_phone_state_rationale">Grant permission to read phone state</string>
    <string name="attendance">Attendance</string>
    <string name="hint_business_date">Business Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="hint_search">Search</string>
    <string name="submit">Submit</string>
    <string name="error_select_attendance_date">Select Business Date</string>
    <string name="no_data">No data found</string>
    <string name="selected">Selected contractors</string>
    <string name="customer_type">Customer type</string>
    <string name="search_name">Search name</string>
    <string name="action_done">Done</string>
    <string name="none_selected">No contractor selected</string>
    <string name="no_data_search">No data found,\n Try to update your search...</string>
    <string name="error_select_contractor">Select Contractor to mark attendance</string>
    <string name="customer_service_requirement">Customer Service Requirement</string>
    <string name="shift_type">Shift type</string>
    <string name="day_shift">Day shift</string>
    <string name="night_shift">Night Shift</string>
    <string name="terms_n_conditions"><![CDATA[By Signing In, You are Agreed to the Terms & Conditions of Employee Tracking.]]></string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_want_to_change_date">Are you sure you want to change the date? All selected contractor data will be cleared. Press \'Yes\' to confirm change date and press \'Cancel\' to no changes</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="error_you_are_off_duty">You are off duty now, you cannot take attendance when you off duty</string>
    <string name="share_on_whatsapp">Share Quote</string>
    <string name="share_app">Shared via Mars ERP App</string>
    <string name="cancel">Cancel</string>
    <string name="error_you_can_take_only_one_attendance">You can select only %d contractor(s), Please remove extra selected contractors</string>
    <string name="error_you_can_take_only_one_attendance_search">You have already selected MAX %d contractor(s) available for you, Please remove extra selected contractors to proceed further</string>
    <string name="max">Max %d allowed</string>
    <string name="location_permission_required">Location permission is required to use this app</string>
    <string name="error_turn_on_gps">Your GPS is off. Please turn it on. To use this app</string>
    <string name="view_reports">View Attendance </string>
    <string name="attendance_report">Attendance Report</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="service_type">Service Type</string>
    <string name="name">Name</string>
    <string name="results">Results</string>
    <string name="privacy_policy_url">https://climbstaff.com/privacy</string>
    <string name="app_version">App version</string>
    <string name="hint_mobile_no">Enter Mobile Number</string>
    <string name="terms_n_conditions_policy"><![CDATA[<b>Privacy Policy</b> and <b>Terms & Conditions</b>]]></string>
    <string name="verify_otp">Verify and Login</string>
    <string name="sms_sent">An SMS with 4-digit OTP has been \n sent to your mobile number</string>
    <string name="aggree_terms_n_conditions_policy">By signing in you agree to \n Terms of services and privacy policy</string>
    <string name="error_invalid_phone">Please enter valid phone number</string>
    <string name="something_went_wrong">cannot request data currently.</string>
    <string name="contact_lead">Contacts/ Leads</string>
    <string name="create_new">Create new</string>
    <string name="company_name">Company Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="hint_owner_name">Owner Name</string>
    <string name="owner_contact_no">Owner Contact Number</string>
    <string name="hint_owner_contact_no">Owner Contact Number</string>
    <string name="owner_email_address">Owner Email Address</string>
    <string name="hint_owner_email">Owner Email Address</string>
    <string name="address">Address</string>
    <string name="hint_address">Address</string>
    <string name="remark">Remark</string>
    <string name="hint_remark">Remark</string>
    <string name="type">Type</string>
    <string name="contact_type">Contact Type</string>
    <string name="more_icon"><![CDATA[&#8942;]]></string>
    <string name="edit_lead">Edit Lead</string>
    <string name="remove_edit_lead">Remove / Edit Lead</string>
    <string name="schedule_meeting">Schedule Meeting</string>
    <string name="mark_as_imp">Mark as IMP</string>
    <string name="meeting">Meeting</string>
    <string name="leaves">Leaves</string>
    <string name="leave_application">Leave Applications</string>
    <string name="tour_details">Tour Details</string>
    <string name="expenses">Expenses</string>
    <string name="leave_for">Leave for</string>
    <string name="leave_reason">Leave Reason</string>
    <string name="hint_leave_reason">Leave Reason</string>
    <string name="leave_period">Leave Period</string>
    <string name="hint_leave_period">Leave Period</string>
    <string name="hint_from">From</string>
    <string name="hint_to">To</string>
    <string name="expense_name">Expense Name</string>
    <string name="hint_remark_add_here">Remark Add Here</string>
    <string name="expense_cost">Expense Cost (in INR)</string>
    <string name="hint_expense_cost">Ex. 250</string>
    <string name="error_reason">Please enter reason</string>
    <string name="error_select_from_date">Select From Date!</string>
    <string name="error_select_to_date">Select To Date</string>
    <string name="error_company_name">Please Enter Company Name</string>
    <string name="error_company_address">Please Enter Company Address</string>
    <string name="error_owner_name">Please Enter Owner Name</string>
    <string name="error_owner_mobile">Please Enter Owner Mobile</string>
    <string name="error_email">Please Enter Email Address</string>
    <string name="error_selected_type_id">Please select type!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_gps">You location is turned off, You are now on duty Turn location On</string>
    <string name="launch_activity">Open Climbstaff App</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="on_duty">ON Duty</string>
    <string name="app_desc">Efficient Employee Manager</string>
    <string name="welcome">Welcome to Climbstaff</string>
    <string name="welcome_desc">Please provide your phone number to authorize \nyou. A confirmation SMS will be sent to your\nphone number</string>
    <string name="terms_desc">By continuing, you are indicating that you agree to the</string>
    <string name="company_name_title">Sweetcorn Developers</string>
    <string name="verification">Verification</string>
    <string name="verification_desc">We have sent you an SMS with 4 digit code to the\n number that you provided.</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="search_contacts">Search Contacts...</string>
    <string name="remember_to_use_sheet">Remember to use expense sheet wisely</string>
    <string name="meetings">Meetings</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_meeting">Add Meeting</string>
    <string name="total_ta_da">Total TA/DA</string>
    <string name="apr">APR</string>
    <string name="total_expense">Total Expense</string>
    <string name="km_today">KM Today</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_remark">Contact Remark</string>
    <string name="contact_address">Contact Address</string>
    <string name="hint_name">Name</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="finish_day">Finish Day</string>
    <string name="meeting_information">Meeting Information</string>
    <string name="meeting_status">Meeting Status</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="meeting_notes">Meetings Notes</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_company">Contact Company</string>
    <string name="contact_location">Contact Location</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_image">Delete Profile Image</string>
    <string name="add_note">Add Note</string>
    <string name="meeting_with">Meeting With</string>
    <string name="add_meeting_note">Add Meeting Note</string>
    <string name="add_point">Add Point</string>
    <string name="write_note">Write Note</string>
    <string name="reschedule_cancel_meeting">Reschedule/ Cancel Meeting</string>
    <string name="add_reason">Add reason</string>
    <string name="hint_write_reason">Write Reason</string>
    <string name="ta_da_report">TA / DA Report</string>
    <string name="expense_report">Expense Report</string>
    <string name="km_report">KM Report</string>
    <string name="set_pin_title">Secure Your App</string>
    <string name="set_pin_caption">This pin will be required every time you access this application</string>
    <string name="set_pin_enter_4_digit">Enter 4 digit PIN</string>
    <string name="enable_finger_print">Enable Fingerprint Scan &#160;&#160;</string>
</resources>