<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReportActivity">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/toolbar_layout_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fifteen_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_attendace_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy_dp"
                android:text="@string/attendance_report"
                android:background="@drawable/report_bg"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ta_da_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:text="@string/ta_da_report"
                android:background="@drawable/report_bg"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_expense_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:gravity="center"
                android:text="@string/expense_report"
                android:background="@drawable/report_bg"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_km_report"
                android:layout_width="match_parent"
                android:layout_height="@dimen/seventy_dp"
                android:layout_marginTop="@dimen/fifteen_dp"
                android:text="@string/km_report"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/report_bg"
android:gravity="center"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>